--- a/META.yml
+++ b/META.yml
@@ -21,7 +21,7 @@ requires:
 resources:
   homepage: http://padre.perlide.org
   repository: http://svn.perlide.org/padre/trunk/Padre-Plugin-LaTeX/
-version: 0.05
+version: 0.06
 x_Dist_Zilla:
   plugins:
     -
@@ -88,6 +88,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::CompileTests
       name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::CompileTests
       version: 1.101800
+    -
+      class: Dist::Zilla::Plugin::LoadTests
+      name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::LoadTests
+      version: 0.03
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::EOLTests
