--- a/dist.ini
+++ b/dist.ini
@@ -2,8 +2,8 @@ name             = Padre-Plugin-LaTeX
 author           = Zeno Gantner <zenog@cpan.org>
 author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 license          = Perl_5
-version          = 0.07
-copyright_holder = Zeno Gantner
+version          = 0.08
+copyright_holder = Zeno Gantner, Ahmad M. Zawawi
 
 [@PadrePlugin]
 
