--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'LaTeX Support for Padre'
+abstract: 'LaTeX support for Padre'
 author:
   - 'Zeno Gantner <zenog@cpan.org>'
   - 'Ahmad M. Zawawi <ahmad.zawawi@gmail.com>'
@@ -21,7 +21,7 @@ requires:
 resources:
   homepage: http://padre.perlide.org
   repository: http://svn.perlide.org/padre/trunk/Padre-Plugin-LaTeX/
-version: 0.08
+version: 0.09
 x_Dist_Zilla:
   plugins:
     -
@@ -159,6 +159,18 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
+      version: 4.102345
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: TestRelease
+      version: 4.102345
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: ConfirmRelease
+      version: 4.102345
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: UploadToCPAN
       version: 4.102345
     -
       class: Dist::Zilla::Plugin::FinderCode
