--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = Padre-Plugin-LaTeX
 author           = Zeno Gantner <zenog@cpan.org>
 author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 license          = Perl_5
-version          = 0.08
+version          = 0.09
 copyright_holder = Zeno Gantner, Ahmad M. Zawawi
 
 [@PadrePlugin]
@@ -12,3 +12,8 @@ repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-LaTeX/
 
 [Prereqs]
 Padre            = 0.65
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
